<resources>
    <string name="app_name" translatable="false">Ipsos PT</string>
    <string name="title_activity_main" translatable="false">Ipsos PT</string>
    <string name="title_activity_detail" translatable="false">Hane Detayı</string>
    <string name="title_activity_ind_detail" translatable="false">Birey Detayı</string>
    <string name="title_activity_panel" translatable="false">Hane Panelleri</string>
    <string name="title_activity_shipping" translatable="false">Kargo</string>

    <string name="internet_no_connection" translatable="false">İnternete bağlı değilsiniz! Uygulama çevrim dışı çalışacak.</string>
    <string name="internet_no_connection_login" translatable="false">İnternete bağlı değilsiniz! İnternete bağlanmadıkça uygulamayı kullanamazsınız.</string>
    <string name="internet_connection" translatable="false">İnternet bağlantısı aktif.</string>
    <string name="invalid_operation" translatable="false">Geçersiz işlem!</string>
    <string name="no_data_found" translatable="false">Gösterilecek veri bulunamadı.</string>
    <string name="no_user_data_found" translatable="false">Kullanıcı bilgisi bulunamadı. Yeniden giriş yapıp tekrar deneyin.</string>
    <string name="logout_title" translatable="false">Çıkış</string>
    <string name="logout_are_you_sure" translatable="false">Çıkış yapmak istediğinizden emin misiniz?</string>

    <string name="order_asc" translatable="false">ASC</string>
    <string name="order_desc" translatable="false">DESC</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Şifre</string>
    <string name="action_sign_in" translatable="false">Giriş</string>
    <string name="error_invalid_email" translatable="false">Şirket maili kullanmanız gerekmektedir.</string>
    <string name="error_invalid_password" translatable="false">Şifre en az 8 haneli olmalıdır.</string>
    <string name="error_incorrect_password" translatable="false">Kullanıcı adı veya şifre hatalı.</string>
    <string name="error_field_required" translatable="false">Zorunlu alan!</string>

    <!-- Navigation menu -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navigation_show_all" translatable="false">Bütün Haneler</string>
    <string name="navigation_show_today" translatable="false">Bugünkü Ziyaretler</string>
    <string name="navigation_communication" translatable="false">İletişim</string>
    <string name="navigation_send_mail" translatable="false">E-Posta Gönder</string>
    <string name="navigation_call" translatable="false">Ara</string>
    <string name="navigation_shipping" translatable="false">Kargo</string>
    <string name="navigation_new_form" translatable="false">Yeni Form</string>

    <string name="action_logout" translatable="false">Çıkış</string>
    <string name="action_sync" translatable="false">Veriyi Güncelle</string>

    <string name="day" translatable="false">Gün</string>
    <string-array name="days_array">
        <item>Hepsi</item>
        <item>Pazartesi</item>
        <item>Salı</item>
        <item>Çarşamba</item>
        <item>Perşembe</item>
        <item>Cuma</item>
        <item>Cumartesi</item>
        <item>Pazar</item>
    </string-array>
    <string name="order_by_fam_code" translatable="false">Hane Kodu</string>
    <string name="order_by_fam_name" translatable="false">Hane Adı</string>
    <string name="order_by_fam_address" translatable="false">Mahalle</string>

    <!-- Detail form -->
    <string name="form_fam_code" translatable="false">Hane: </string>
    <string name="form_reg_beg" translatable="false">Kayıt Tarihi: </string>
    <string name="form_district" translatable="false">İlçe: </string>
    <string name="form_province" translatable="false">Şehir: </string>
    <string name="form_neighborhood" translatable="false">Mahalle: </string>
    <string name="form_address" translatable="false">Adres: </string>
    <string name="form_landline" translatable="false">Ev Tel: </string>
    <string name="form_workline" translatable="false">İş Tel: </string>
    <string name="form_cellular" translatable="false">Cep Tel: </string>
    <string name="form_avp" translatable="false">AVP: </string>
    <string name="form_alk" translatable="false">Alkol: </string>
    <string name="form_sp" translatable="false">SP: </string>
    <string name="form_ek_alkol" translatable="false">Ek Alkol: </string>
    <string name="form_baby" translatable="false">Bebek: </string>
    <string name="form_point" translatable="false">Puan: </string>
    <string name="form_ind_list" translatable="false">Bireyler</string>
    <string name="form_panels" translatable="false">Paneller</string>

    <!-- Ind detail form -->
    <string name="form_ind_name" translatable="false">Ad Soyad:</string>
    <string name="form_ind_dob" translatable="false">Dogum Tarihi:</string>
    <string name="form_ind_rel" translatable="false">Akrabalik:</string>
    <string name="form_ind_edu" translatable="false">Egitim:</string>
    <string name="form_ind_job" translatable="false">Meslek:</string>
    <string name="form_ind_email" translatable="false">E-Posta:</string>

    <!-- Panel form -->
    <string name="form_panel_list_item_none" translatable="false">Form durumu alınamadı.</string>
    <string name="form_panel_list_item_0" translatable="false">Henüz form bırakılmadı.</string>
    <string name="form_panel_list_item_1" translatable="false">Form bırakıldı, teslim alınacak.</string>
    <string name="form_panel_list_item_2" translatable="false">Form teslim alındı, gönderime hazır.</string>
    <string name="form_panel_list_item_3" translatable="false">Form kargoya verildi.</string>
    <string name="form_panel_list_left_confirmation_title" translatable="false">Form bırakıldı onayı</string>
    <string name="form_panel_list_left_confirmation" translatable="false">Form bırakıldı olarak işaretlenecek, emin misiniz?</string>
    <string name="form_panel_list_left_remove_confirmation" translatable="false">Form bırakıldı onayı kaldırılacak, emin misiniz?</string>
    <string name="form_panel_list_left" translatable="false">Form bırakıldı.</string>
    <string name="form_panel_list_left_remove" translatable="false">Form bırakıldı onayı kaldırıdı.</string>
    <string name="form_panel_list_taken_confirmation_title" translatable="false">Form alındı onayı</string>
    <string name="form_panel_list_taken_confirmation" translatable="false">Form alındı olarak işaretlenecek, emin misiniz?</string>
    <string name="form_panel_list_taken_remove_confirmation" translatable="false">Form alındı onayı kaldırılacak, emin misiniz?</string>
    <string name="form_panel_list_taken" translatable="false">Form alındı.</string>
    <string name="form_panel_list_taken_remove" translatable="false">Form alındı onayı kaldırıldı.</string>
    <string name="form_panel_list_sent_confirmation_title" translatable="false">Form kargoya verildi onayı</string>
    <string name="form_panel_list_sent_confirmation" translatable="false">Form kargoya verildi olarak işaretlenecek, emin misiniz?</string>
    <string name="form_panel_list_sent_remove_confirmation" translatable="false">Form kargoya verildi onayı kaldırılacak, emin misiniz?</string>
    <string name="form_panel_list_sent" translatable="false">Form kargoya verildi.</string>
    <string name="form_panel_list_sent_remove" translatable="false">Form kargoya verildi onayı kaldırıldı.</string>
    <string name="form_panel_list_already_taken_error" translatable="false">Form alındı olarak işaretlendiği için bu işlemi yapamazsınız.</string>
    <string name="form_panel_list_not_yet_taken_error" translatable="false">Form alındı olarak işaretlenmeden bu işlemi yapamazsınız.</string>
    <string name="form_panel_list_not_yet_left_error" translatable="false">Form bırakıldı olarak işaretlenmeden bu işlemi yapamazsınız.</string>
    <string name="form_panel_list_already_sent_error" translatable="false">Form kargolandı olarak işaretlendiği için bu işlemi yapamazsınız.</string>

    <!-- Shipping form -->
    <string name="form_shipping_select_all" translatable="false">Hepsini seç</string>
    <string name="form_shipping_send_all" translatable="false">Hepsini Gönder</string>
    <string name="form_shipping_shipped" translatable="false">Seçilenleri Gönder</string>
    <string name="form_shipping_nothing_selected" translatable="false">Henüz bir form seçmediniz.</string>
    <string name="form_shipping_confirmation_title" translatable="false">Form kargo</string>
    <string name="form_shipping_send_all_confirmation" translatable="false">BÜTÜN formları kargoya verildi olarak işaretlemek istediğinizden emin misiniz?</string>
    <string name="form_shipping_send_confirmation" translatable="false">Seçilen formları kargoya verildi olarak işaretlemek istediğinizden emin misiniz?</string>

    <!-- SyncAdapter related -->
    <!--<string name="sync_account_type">ipsospt.cpm.ipsos.com</string>-->
    <!--<string name="content_authority">com.ipsos.cpm.ipsospt</string>-->
    <string name="sync_account_name">Account</string>
    <string name="sync_account_type">com.ipsos.cpm.ipsospt.account</string>
    <string name="content_authority">com.ipsos.cpm.ipsospt</string>
    <string name="sync_status_start">Senkronizasyon başladı.</string>
    <string name="sync_status_end">Senkronizasyon tamamlandı.</string>
    <string name="sync_status_ok">Senkronizasyon başarıyla tamamlandı.</string>
    <string name="sync_status_unknown">Senkronizasyon sırasında bilinmeyen bir hata oluştu.</string>
    <string name="sync_status_unauthorized">Sunucuya login olunamadı.</string>
    <string name="sync_status_server_down">Sunucuya ulaşılamadı.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
