<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today_list"
            android:icon="@drawable/ic_show_today_fam_list"
            android:title="@string/navigation_show_today" />
        <item
            android:id="@+id/nav_all_list"
            android:icon="@drawable/ic_show_all_fam_list"
            android:title="@string/navigation_show_all" />

        <item
            android:id="@+id/nav_shipping"
            android:icon="@drawable/ic_shipping"
            android:title="@string/navigation_shipping" />

        <item
            android:id="@+id/nav_new_fam_form"
            android:icon="@drawable/ic_new_form"
            android:title="@string/navigation_new_form" />
    </group>

    <item android:title="@string/navigation_communication">
        <menu>
            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_call"
                android:title="@string/navigation_call" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_email"
                android:title="@string/navigation_send_mail" />
        </menu>
    </item>

</menu>
