<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fam_detail_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.ipsos.cpm.ipsospt.FamDetailFragment">

        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_fam_code"
                style="@style/FamDetailTextLabel"/>
            <TextView
                android:id="@+id/famDetailFamCode"
                style="@style/FamDetailText" />
        </LinearLayout>
        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_reg_beg"
                style="@style/FamDetailTextLabel"/>
            <TextView
                android:id="@+id/famDetailRegBeg"
                style="@style/FamDetailText" />
        </LinearLayout>
        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_district"
                style="@style/FamDetailTextLabel"/>
            <TextView
                android:id="@+id/famDetailDistrict"
                style="@style/FamDetailText"/>
        </LinearLayout>
        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_neighborhood"
                style="@style/FamDetailTextLabel"/>
            <TextView
                android:id="@+id/famDetailNeighborhood"
                style="@style/FamDetailText"/>
        </LinearLayout>
        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_address"
                style="@style/FamDetailTextLabel"/>
            <TextView
                android:id="@+id/famDetailAddress"
                style="@style/FamDetailText"/>
        </LinearLayout>
        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_landline"
                style="@style/FamDetailTextLabel"/>
            <TextView
                android:id="@+id/famDetailLandLine"
                android:autoLink="phone"
                style="@style/FamDetailText"/>
        </LinearLayout>
        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_workline"
                style="@style/FamDetailTextLabel"/>
            <TextView
                android:id="@+id/famDetailWorkLine"
                android:autoLink="phone"
                style="@style/FamDetailText"/>
        </LinearLayout>
        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_cellular"
                style="@style/FamDetailTextLabel"/>
            <TextView
                android:id="@+id/famDetailCellular"
                android:autoLink="phone"
                style="@style/FamDetailText"/>
        </LinearLayout>
        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_point"
                style="@style/FamDetailTextLabel"/>
            <TextView
                android:id="@+id/famDetailPoint"
                style="@style/FamDetailText"/>
        </LinearLayout>

        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_avp"
                style="@style/FamDetailTextLabel"/>
            <CheckBox
                android:id="@+id/famDetailAVP"
                android:enabled="false"
                style="@style/FamDetailText"/>
            <TextView
                android:text="@string/form_alk"
                style="@style/FamDetailTextLabel"/>
            <CheckBox
                android:id="@+id/famDetailAlkol"
                android:enabled="false"
                style="@style/FamDetailText"/>
            <TextView
                android:text="@string/form_sp"
                style="@style/FamDetailTextLabel"/>
            <CheckBox
                android:id="@+id/famDetailSP"
                android:enabled="false"
                style="@style/FamDetailText"/>
        </LinearLayout>
        <LinearLayout style="@style/FamDetailHorizontalLayout">
            <TextView
                android:text="@string/form_ek_alkol"
                style="@style/FamDetailTextLabel"/>
            <CheckBox
                android:id="@+id/famDetailEkAlkol"
                android:enabled="false"
                style="@style/FamDetailText"/>
            <TextView
                android:text="@string/form_baby"
                style="@style/FamDetailTextLabel"/>
            <CheckBox
                android:id="@+id/famDetailBaby"
                android:enabled="false"
                style="@style/FamDetailText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/famDetailIndListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_ind_list"
                android:layout_margin="5dp" />
            <Button
                android:id="@+id/famDetailPanelsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_panels"
                android:layout_margin="5dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>