<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ipsos.cpm.ipsospt.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/days_spinner"
        android:entries="@array/days_array"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/order_by_fam_code_layout"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_by_fam_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingTop="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_by_fam_code_image"
                android:src="@drawable/ic_order_asc"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/order_by_fam_name_layout"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_by_fam_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingTop="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_by_fam_name_image"
                android:src="@drawable/ic_order_asc"
                android:visibility="invisible"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/order_by_fam_address_layout"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_by_fam_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingTop="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_by_fam_address_image"
                android:src="@drawable/ic_order_asc"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content_main_fragment"
        android:name="com.ipsos.cpm.ipsospt.FamListFragment"
        tools:layout="@layout/list_item_fam" />

</LinearLayout>
